--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "LICENSE",
     "README.md"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "errno": "^0.1.1",
+    "es6-promise": "^2.0.1",
+    "yatc": "^0.1.0"
+  },
   "devDependencies": {
     "chai": "^1.10.0",
     "coveralls": "^2.11.2",
