--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "yatc": "^0.1.0"
   },
   "devDependencies": {
+    "bitcoinjs-lib": "^1.4.3",
     "chai": "^1.10.0",
     "coveralls": "^2.11.2",
     "grunt": "^0.4.5",
