--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "errno": "^0.1.1",
     "es6-promise": "^2.0.1",
     "lodash": "^3.0.0",
+    "lru-cache": "^2.5.0",
     "socket.io-client": "^1.3.2",
     "yatc": "^0.1.0"
   },
