--- a/package.json
+++ b/package.json
@@ -24,31 +24,36 @@
     "README.md"
   ],
   "dependencies": {
-    "bs58check": "^1.0.4",
-    "errno": "^0.1.1",
-    "es6-promise": "^2.0.1",
-    "lodash": "^3.0.0",
-    "lru-cache": "^2.5.0",
-    "socket.io-client": "^1.3.2",
-    "yatc": "^0.1.0"
+    "browser-request": "0.3.3",
+    "bs58check": "1.0.4",
+    "errno": "0.1.1",
+    "es6-promise": "2.0.1",
+    "lodash": "3.0.0",
+    "lru-cache": "2.5.0",
+    "request": "2.51.0",
+    "socket.io-client": "1.3.2",
+    "yatc": "0.1.0"
   },
   "devDependencies": {
-    "bitcoinjs-lib": "^1.4.3",
-    "chai": "^1.10.0",
-    "coveralls": "^2.11.2",
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^3.3.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.7.0",
-    "grunt-jscs": "^1.2.0",
-    "grunt-mocha-istanbul": "^2.3.0",
-    "grunt-mocha-test": "^0.12.6",
-    "istanbul": "^0.3.5",
-    "jscs": "^1.10.0",
-    "jscs-jsdoc": "^0.4.0",
-    "jshint-stylish": "^1.0.0",
-    "mocha": "^2.1.0"
+    "bitcoinjs-lib": "1.4.3",
+    "chai": "1.10.0",
+    "coveralls": "2.11.2",
+    "grunt": "0.4.5",
+    "grunt-browserify": "3.3.0",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-jshint": "0.10.0",
+    "grunt-contrib-uglify": "0.7.0",
+    "grunt-jscs": "1.2.0",
+    "grunt-mocha-istanbul": "2.3.0",
+    "grunt-mocha-test": "0.12.6",
+    "istanbul": "0.3.5",
+    "jscs": "1.10.0",
+    "jscs-jsdoc": "0.4.0",
+    "jshint-stylish": "1.0.0",
+    "mocha": "2.1.0"
+  },
+  "browser": {
+    "request": "browser-request"
   },
   "license": "MIT"
 }
