--- a/.jshintrc
+++ b/.jshintrc
@@ -1,6 +1,6 @@
 {
   // Enforcing
-  "bitwise"       : true,     // Prohibit bitwise operators (&, |, ^, etc.)
+  "bitwise"       : false,    // Prohibit bitwise operators (&, |, ^, etc.)
   "camelcase"     : false,    // Identifiers must be in camelCase
   "curly"         : false,    // Require {} for every new block or scope
   "eqeqeq"        : true,     // Require triple equals (===) for comparison
