--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "README.md"
   ],
   "dependencies": {
-    "bigi": "^1.4.0",
+    "bigi": "1.4.0",
     "browser-request": "0.3.3",
     "bs58check": "1.0.4",
     "errno": "0.1.1",
+    "eventemitter2": "0.4.14",
     "lodash": "3.0.0",
     "lru-cache": "2.5.0",
-    "q": "1.1.2",
+    "q": "1.2.0",
     "request": "2.51.0",
     "socket.io-client": "1.3.2",
     "ws": "0.7.0",
