--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
-before_install:
-  - npm install -g grunt-cli
 node_js:
   - "0.10"
   - "0.11"
   - "0.12"
-script: "grunt jshint jscs build coveralls"
+env:
+  - TEST_SUITE=coveralls
+  - TEST_SUITE=standard
+script: "npm run-script $TEST_SUITE"
