--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: node_js
 node_js:
   - "0.10"
-  - "0.11"
-  - "0.12"
 env:
   - TEST_SUITE=coveralls
-  - TEST_SUITE=standard
+  - TEST_SUITE=lint
 script: "npm run-script $TEST_SUITE"
