--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "bigi": "1.4.0",
     "browser-request": "0.3.3",
     "bs58check": "1.0.4",
-    "errno": "0.1.1",
+    "errno": "^0.1.1",
     "lodash": "3.3.1",
     "lru-cache": "2.5.0",
     "q": "1.2.0",
