--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "description": "Bitcoin blockchain for wallets.",
   "author": "Fomichev Kirill <fanatid@ya.ru>",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "git@github.com:chromaway/blockchainjs.git"
@@ -20,13 +20,13 @@
     "testnet3"
   ],
   "files": [
-    "src",
+    "lib",
     "LICENSE",
     "README.md"
   ],
   "scripts": {
     "compile_test": "browserify test/**/*.js >test/blockchainjs.test.js",
-    "coverage": "istanbul cover _mocha -- --timeout 20000 test/**/*.js",
+    "coverage": "istanbul cover _mocha -- test/**/*.js",
     "coveralls": "npm run-script coverage && coveralls <coverage/lcov.info",
     "lint": "standard",
     "test": "istanbul test mocha -- --reporter spec test/**/*.js"
@@ -35,20 +35,21 @@
     "bigi": "1.4.0",
     "browser-request": "0.3.3",
     "bs58check": "1.0.4",
-    "errno": "^0.1.1",
-    "lodash": "3.3.1",
+    "errno": "0.1.1",
+    "lodash": "3.4.0",
     "lru-cache": "2.5.0",
     "q": "1.2.0",
-    "request": "2.51.0",
-    "socket.io-client": "1.3.2",
-    "ws": "0.7.0",
+    "request": "2.53.0",
+    "socket.io-client": "1.3.5",
+    "ws": "0.7.1",
     "yatc": "0.1.0"
   },
   "devDependencies": {
-    "bitcoinjs-lib": "1.4.3",
+    "bitcoinjs-lib": "1.5.0",
     "browserify": "9.0.3",
-    "chai": "1.10.0",
+    "chai": "2.1.1",
     "coveralls": "2.11.2",
+    "helloblock-faucet": "0.0.1",
     "istanbul": "0.3.5",
     "mocha": "2.1.0",
     "optimist": "0.6.1",
