--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     "q": "1.2.0",
     "request": "2.53.0",
     "socket.io-client": "1.3.5",
+    "url-join": "0.0.1",
     "ws": "0.7.1",
     "yatc": "0.1.0"
   },
   "devDependencies": {
-    "bitcoinjs-lib": "1.5.0",
+    "bitcoinjs-lib": "1.4.3",
     "browserify": "9.0.3",
     "chai": "2.1.1",
     "coveralls": "2.11.2",
