--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
   },
   "dependencies": {
     "bigi": "1.4.0",
+    "bluebird": "2.9.14",
     "browser-request": "0.3.3",
     "bs58check": "1.0.4",
     "error-system": "0.0.2",
     "lodash": "3.4.0",
     "lru-cache": "2.5.0",
-    "q": "1.2.0",
     "request": "2.53.0",
     "socket.io-client": "1.3.5",
     "url-join": "0.0.1",
