--- a/package.json
+++ b/package.json
@@ -1,60 +1,60 @@
 {
-  "name": "blockchainjs",
-  "version": "0.2.0",
-  "description": "Bitcoin blockchain for wallets.",
-  "author": "Fomichev Kirill <fanatid@ya.ru>",
-  "main": "src/index.js",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:chromaway/blockchainjs.git"
-  },
-  "bugs": {
-    "url": "https://github.com/chromaway/blockchainjs/issues"
-  },
-  "keywords": [
-    "bitcoin",
-    "blockchain",
-    "verified",
-    "mainnet",
-    "testnet3"
-  ],
   "files": [
-    "src",
-    "LICENSE",
+    "src", 
+    "LICENSE", 
     "README.md"
-  ],
-  "dependencies": {
-    "babel": "4.0.2",
-    "browser-request": "0.3.3",
-    "bs58check": "1.0.4",
-    "errno": "0.1.1",
-    "lodash": "3.0.0",
-    "lru-cache": "2.5.0",
-    "request": "2.51.0",
-    "socket.io-client": "1.3.2",
-    "ws": "0.7.0",
-    "yatc": "0.1.0"
-  },
-  "devDependencies": {
-    "bitcoinjs-lib": "1.4.3",
-    "chai": "1.10.0",
-    "coveralls": "2.11.2",
-    "grunt": "0.4.5",
-    "grunt-browserify": "3.3.0",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-jshint": "0.10.0",
-    "grunt-contrib-uglify": "0.7.0",
-    "grunt-jscs": "1.2.0",
-    "grunt-mocha-istanbul": "2.3.0",
-    "grunt-mocha-test": "0.12.6",
-    "istanbul": "0.3.5",
-    "jscs": "1.10.0",
-    "jscs-jsdoc": "0.4.0",
-    "jshint-stylish": "1.0.0",
-    "mocha": "2.1.0"
-  },
+  ], 
+  "license": "MIT", 
   "browser": {
     "request": "browser-request"
-  },
-  "license": "MIT"
+  }, 
+  "name": "blockchainjs", 
+  "repository": {
+    "url": "git@github.com:chromaway/blockchainjs.git", 
+    "type": "git"
+  }, 
+  "author": "Fomichev Kirill <fanatid@ya.ru>", 
+  "bugs": {
+    "url": "https://github.com/chromaway/blockchainjs/issues"
+  }, 
+  "version": "0.2.1", 
+  "dependencies": {
+    "socket.io-client": "1.3.2", 
+    "lodash": "3.0.0", 
+    "babel": "4.0.2", 
+    "request": "2.51.0", 
+    "browser-request": "0.3.3", 
+    "ws": "0.7.0", 
+    "errno": "0.1.1", 
+    "yatc": "0.1.0", 
+    "bs58check": "1.0.4", 
+    "lru-cache": "2.5.0"
+  }, 
+  "keywords": [
+    "bitcoin", 
+    "blockchain", 
+    "verified", 
+    "mainnet", 
+    "testnet3"
+  ], 
+  "devDependencies": {
+    "jshint-stylish": "1.0.0", 
+    "jscs": "1.10.0", 
+    "coveralls": "2.11.2", 
+    "grunt-browserify": "3.3.0", 
+    "istanbul": "0.3.5", 
+    "bitcoinjs-lib": "1.4.3", 
+    "grunt-contrib-jshint": "0.10.0", 
+    "chai": "1.10.0", 
+    "grunt-mocha-test": "0.12.6", 
+    "grunt-contrib-uglify": "0.7.0", 
+    "mocha": "2.1.0", 
+    "grunt-jscs": "1.2.0", 
+    "jscs-jsdoc": "0.4.0", 
+    "grunt-contrib-clean": "0.6.0", 
+    "grunt-mocha-istanbul": "2.3.0", 
+    "grunt": "0.4.5"
+  }, 
+  "main": "src/index.js", 
+  "description": "Bitcoin blockchain for wallets."
 }
