--- a/package.json
+++ b/package.json
@@ -1,81 +1,81 @@
 {
   "files": [
-    "docs", 
-    "lib", 
-    "LICENSE", 
+    "docs",
+    "lib",
+    "LICENSE",
     "README.md"
-  ], 
-  "license": "MIT", 
+  ],
+  "license": "MIT",
   "browser": {
     "request": "browser-request"
-  }, 
-  "name": "blockchainjs", 
+  },
+  "name": "blockchainjs",
   "contributors": [
     {
-      "name": "Alex Mizrahi", 
+      "name": "Alex Mizrahi",
       "email": "alex.mizrahi@gmail.com"
     }
-  ], 
-  "author": "Fomichev Kirill <fanatid@ya.ru>", 
+  ],
+  "author": "Fomichev Kirill <fanatid@ya.ru>",
   "bugs": {
     "url": "https://github.com/chromaway/blockchainjs/issues"
-  }, 
+  },
   "standard": {
     "ignore": [
-      "blockchainjs.js", 
-      "blockchainjs.min.js", 
+      "blockchainjs.js",
+      "blockchainjs.min.js",
       "blockchainjs.test.js"
     ]
-  }, 
+  },
   "repository": {
-    "url": "git://github.com/chromaway/blockchainjs.git", 
+    "url": "git://github.com/chromaway/blockchainjs.git",
     "type": "git"
-  }, 
-  "version": "0.3.7", 
+  },
+  "version": "0.3.7",
   "dependencies": {
-    "socket.io-client": "1.3.5", 
-    "lodash": "3.4.0", 
-    "request": "2.53.0", 
-    "browser-request": "0.3.3", 
-    "bigi": "1.4.0", 
-    "url-join": "0.0.1", 
-    "ws": "0.7.1", 
-    "lru-cache": "2.5.0", 
-    "error-system": "0.1.0", 
-    "bluebird": "2.9.14", 
-    "bs58check": "1.0.4"
-  }, 
+    "bigi": "1.4.0",
+    "bluebird": "2.9.14",
+    "browser-request": "0.3.3",
+    "bs58check": "1.0.4",
+    "error-system": "0.1.0",
+    "lodash": "3.4.0",
+    "lru-cache": "2.5.0",
+    "request": "2.53.0",
+    "socket.io-client": "1.3.5",
+    "url-join": "0.0.1",
+    "ws": "0.7.1"
+  },
   "scripts": {
-    "coveralls": "npm run-script coverage && coveralls <coverage/lcov.info", 
-    "coverage": "istanbul cover _mocha -- test/*.js test/**/*.js", 
-    "lint": "standard", 
-    "compile_test": "browserify test/*.js test/**/*.js >blockchainjs.test.js", 
-    "compile": "browserify lib/index.js -s BlockchainJS -o blockchainjs.js", 
-    "build": "npm run-script compile && npm run-script uglify", 
-    "clean": "rm -f blockchainjs.js blockchainjs.min.js blockchainjs.test.js", 
-    "test": "istanbul test mocha -- --reporter spec test/*.js test/**/*.js", 
+    "coveralls": "npm run-script coverage && coveralls <coverage/lcov.info",
+    "coverage": "istanbul cover _mocha -- test/*.js test/**/*.js",
+    "lint": "standard",
+    "compile_test": "browserify test/*.js test/**/*.js >blockchainjs.test.js",
+    "compile": "browserify lib/index.js -s BlockchainJS -o blockchainjs.js",
+    "build": "npm run-script compile && npm run-script uglify",
+    "clean": "rm -f blockchainjs.js blockchainjs.min.js blockchainjs.test.js",
+    "test": "istanbul test mocha -- --reporter spec test/*.js test/**/*.js",
     "uglify": "uglify -s blockchainjs.js -o blockchainjs.min.js"
-  }, 
+  },
   "keywords": [
-    "bitcoin", 
-    "blockchain", 
-    "verified", 
-    "mainnet", 
+    "bitcoin",
+    "blockchain",
+    "verified",
+    "mainnet",
     "testnet3"
-  ], 
+  ],
   "devDependencies": {
-    "coveralls": "2.11.2", 
-    "istanbul": "0.3.5", 
-    "uglify": "0.1.1", 
-    "bitcoinjs-lib": "1.4.3", 
-    "helloblock-faucet": "0.0.1", 
-    "chai": "2.1.1", 
-    "mocha": "2.1.0", 
-    "optimist": "0.6.1", 
-    "progress": "1.1.8", 
-    "standard": "2.10.0", 
+    "coveralls": "2.11.2",
+    "istanbul": "0.3.5",
+    "uglify": "0.1.1",
+    "bitcoinjs-lib": "1.4.3",
+    "helloblock-faucet": "0.0.1",
+    "chai": "2.1.1",
+    "mocha": "2.1.0",
+    "optimist": "0.6.1",
+    "progress": "1.1.8",
+    "standard": "2.10.0",
     "browserify": "9.0.3"
-  }, 
-  "main": "lib/index.js", 
+  },
+  "main": "lib/index.js",
   "description": "Bitcoin blockchain for wallets."
 }
