--- a/package.json
+++ b/package.json
@@ -1,49 +1,64 @@
 {
-  "files": [
-    "docs",
-    "lib",
-    "LICENSE",
-    "README.md"
-  ],
-  "license": "MIT",
-  "browser": {
-    "request": "browser-request"
-  },
   "name": "blockchainjs",
+  "version": "0.3.7",
+  "main": "lib/index.js",
+  "description": "Bitcoin blockchain for wallets.",
+  "author": "Fomichev Kirill <fanatid@ya.ru>",
   "contributors": [
     {
       "name": "Alex Mizrahi",
       "email": "alex.mizrahi@gmail.com"
     }
   ],
-  "author": "Fomichev Kirill <fanatid@ya.ru>",
-  "bugs": {
-    "url": "https://github.com/chromaway/blockchainjs/issues"
-  },
-  "standard": {
-    "ignore": [
-      "blockchainjs.js",
-      "blockchainjs.min.js",
-      "blockchainjs.test.js"
-    ]
-  },
   "repository": {
     "url": "git://github.com/chromaway/blockchainjs.git",
     "type": "git"
   },
-  "version": "0.3.7",
+  "bugs": {
+    "url": "https://github.com/chromaway/blockchainjs/issues"
+  },
+  "license": "MIT",
+  "keywords": [
+    "bitcoin",
+    "blockchain",
+    "verified",
+    "mainnet",
+    "testnet3"
+  ],
+  "files": [
+    "docs",
+    "lib",
+    "LICENSE",
+    "README.md"
+  ],
+  "engines": {
+    "node": "^0.10.x"
+  },
   "dependencies": {
-    "bigi": "1.4.0",
-    "bluebird": "2.9.14",
-    "browser-request": "0.3.3",
-    "bs58check": "1.0.4",
-    "error-system": "0.1.0",
-    "lodash": "3.4.0",
-    "lru-cache": "2.5.0",
-    "request": "2.53.0",
-    "socket.io-client": "1.3.5",
-    "url-join": "0.0.1",
-    "ws": "0.7.1"
+    "bigi": "=1.4.0",
+    "bluebird": "=2.9.14",
+    "browser-request": "=0.3.3",
+    "bs58check": "=1.0.4",
+    "error-system": "=0.1.0",
+    "lodash": "=3.4.0",
+    "lru-cache": "=2.5.0",
+    "request": "=2.53.0",
+    "socket.io-client": "=1.3.5",
+    "url-join": "=0.0.1",
+    "ws": "=0.7.1"
+  },
+  "devDependencies": {
+    "bitcoinjs-lib": "=1.4.3",
+    "browserify": "^9.0.8",
+    "chai": "^2.3.0",
+    "coveralls": "^2.11.2",
+    "helloblock-faucet": "^0.0.1",
+    "istanbul": "^0.3.13",
+    "mocha": "^2.2.4",
+    "optimist": "^0.6.1",
+    "progress": "^1.1.8",
+    "standard": "^3.7.3",
+    "uglify": "^0.1.3"
   },
   "scripts": {
     "coveralls": "npm run-script coverage && coveralls <coverage/lcov.info",
@@ -56,26 +71,14 @@
     "test": "istanbul test mocha -- --reporter spec test/*.js test/**/*.js",
     "uglify": "uglify -s blockchainjs.js -o blockchainjs.min.js"
   },
-  "keywords": [
-    "bitcoin",
-    "blockchain",
-    "verified",
-    "mainnet",
-    "testnet3"
-  ],
-  "devDependencies": {
-    "coveralls": "2.11.2",
-    "istanbul": "0.3.5",
-    "uglify": "0.1.1",
-    "bitcoinjs-lib": "1.4.3",
-    "helloblock-faucet": "0.0.1",
-    "chai": "2.1.1",
-    "mocha": "2.1.0",
-    "optimist": "0.6.1",
-    "progress": "1.1.8",
-    "standard": "2.10.0",
-    "browserify": "9.0.3"
+  "browser": {
+    "request": "browser-request"
   },
-  "main": "lib/index.js",
-  "description": "Bitcoin blockchain for wallets."
+  "standard": {
+    "ignore": [
+      "blockchainjs.js",
+      "blockchainjs.min.js",
+      "blockchainjs.test.js"
+    ]
+  }
 }
