--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lru-cache": "=2.5.0",
     "request": "=2.53.0",
     "socket.io-client": "=1.3.5",
+    "sqlite3": "=3.0.8",
     "url-join": "=0.0.1",
     "ws": "=0.7.1"
   },
@@ -72,7 +73,8 @@
     "uglify": "uglify -s blockchainjs.js -o blockchainjs.min.js"
   },
   "browser": {
-    "request": "browser-request"
+    "request": "browser-request",
+    "./lib/storage/sqlite.js": "./lib/storage/sqlite-browser.js"
   },
   "standard": {
     "ignore": [
