--- a/package.json
+++ b/package.json
@@ -1,23 +1,7 @@
 {
   "name": "blockchainjs",
   "version": "0.3.7",
-  "main": "lib/index.js",
   "description": "Bitcoin blockchain for wallets.",
-  "author": "Fomichev Kirill <fanatid@ya.ru>",
-  "contributors": [
-    {
-      "name": "Alex Mizrahi",
-      "email": "alex.mizrahi@gmail.com"
-    }
-  ],
-  "repository": {
-    "url": "git://github.com/chromaway/blockchainjs.git",
-    "type": "git"
-  },
-  "bugs": {
-    "url": "https://github.com/chromaway/blockchainjs/issues"
-  },
-  "license": "MIT",
   "keywords": [
     "bitcoin",
     "blockchain",
@@ -25,28 +9,60 @@
     "mainnet",
     "testnet3"
   ],
+  "bugs": {
+    "url": "https://github.com/chromaway/blockchainjs/issues"
+  },
+  "license": "MIT",
+  "author": "Chromaway AB",
+  "contributors": [
+    {
+      "name": "Alex Mizrahi",
+      "email": "alex.mizrahi@gmail.com"
+    },
+    {
+      "name": "Kirill Fomichev",
+      "email": "fanatid@ya.ru"
+    }
+  ],
   "files": [
     "docs",
     "lib",
+    "index.js",
     "LICENSE",
     "README.md"
   ],
-  "engines": {
-    "node": "^0.10.x"
+  "main": "./index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chromaway/blockchainjs.git"
+  },
+  "scripts": {
+    "compile": "browserify index.js -s BlockchainJS -o blockchainjs.js -g [ uglifyify --no-sourcemap ]",
+    "compile:debug": "browserify index.js -s BlockchainJS -o blockchainjs.js -d",
+    "compile:test": "find test/ -type f -name \"*.js\" | xargs browserify -o blockchainjs.test.js",
+    "coverage": "find test/ -type f -name \"*.js\" | xargs istanbul cover _mocha --",
+    "coveralls": "npm run coverage && coveralls <coverage/lcov.info",
+    "clean": "rm -f blockchainjs.js blockchainjs.test.js",
+    "karma": "./node_modules/karma/bin/karma start karma.conf.js",
+    "lint": "standard",
+    "test": "npm run test:node && npm run test:browser",
+    "test:node": "find test/ -type f -name \"*.js\" | xargs istanbul test mocha -- --reporter spec",
+    "test:browser": "npm run compile:test && npm run karma"
   },
   "dependencies": {
-    "bigi": "=1.4.0",
-    "bluebird": "=2.9.14",
+    "bigi": "^1.4.0",
+    "bluebird": "^2.9.30",
     "browser-request": "=0.3.3",
-    "bs58check": "=1.0.4",
-    "error-system": "=0.1.0",
-    "lodash": "=3.4.0",
-    "lru-cache": "=2.5.0",
+    "bs58check": "^1.0.5",
+    "error-system": "^0.1.0",
+    "lodash": "^3.9.3",
+    "lru-cache": "^2.6.4",
+    "odd-storage": "^0.1.0",
+    "ready-mixin": "0.0.5",
     "request": "=2.53.0",
-    "socket.io-client": "=1.3.5",
-    "sqlite3": "=3.0.8",
-    "url-join": "=0.0.1",
-    "ws": "=0.7.1"
+    "socket.io-client": "^1.3.5",
+    "url-join": "0.0.1",
+    "ws": "^0.7.2"
   },
   "devDependencies": {
     "bitcoinjs-lib": "=1.4.3",
@@ -55,26 +71,20 @@
     "coveralls": "^2.11.2",
     "helloblock-faucet": "^0.0.1",
     "istanbul": "^0.3.13",
+    "karma": "^0.12.35",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-detect-browsers": "^2.0.0",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-mocha": "^0.1.10",
     "mocha": "^2.2.4",
     "optimist": "^0.6.1",
     "progress": "^1.1.8",
-    "standard": "^3.7.3",
-    "uglify": "^0.1.3"
-  },
-  "scripts": {
-    "coveralls": "npm run-script coverage && coveralls <coverage/lcov.info",
-    "coverage": "istanbul cover _mocha -- test/*.js test/**/*.js",
-    "lint": "standard",
-    "compile_test": "browserify test/*.js test/**/*.js >blockchainjs.test.js",
-    "compile": "browserify lib/index.js -s BlockchainJS -o blockchainjs.js",
-    "build": "npm run-script compile && npm run-script uglify",
-    "clean": "rm -f blockchainjs.js blockchainjs.min.js blockchainjs.test.js",
-    "test": "istanbul test mocha -- --reporter spec test/*.js test/**/*.js",
-    "uglify": "uglify -s blockchainjs.js -o blockchainjs.min.js"
+    "standard": "^4.3.1",
+    "uglifyify": "^3.0.1"
   },
   "browser": {
     "request": "browser-request",
-    "./lib/storage/sqlite.js": "./lib/storage/sqlite-browser.js"
+    "./lib/storage/index.js": "./lib/storage/index-browser.js"
   },
   "standard": {
     "ignore": [
