--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
 language: node_js
 node_js:
+  - "0.10"
   - "0.12"
+addons:
+  firefox: "38.0"
+before_install:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+install:
+  - npm install
 env:
   - TEST_SUITE=compile
   - TEST_SUITE=coveralls
-  - TEST_SUITE=test
   - TEST_SUITE=lint
-script: "npm run-script $TEST_SUITE"
+  - TEST_SUITE=test
+script: "npm run $TEST_SUITE"
