--- a/package.json
+++ b/package.json
@@ -37,61 +37,51 @@
     "url": "https://github.com/chromaway/blockchainjs.git"
   },
   "scripts": {
-    "compile": "browserify index.js -s BlockchainJS -o blockchainjs.js -g [ uglifyify --no-sourcemap ]",
-    "compile:debug": "browserify index.js -s BlockchainJS -o blockchainjs.js -d",
-    "compile:test": "find test/ -type f -name \"*.js\" | xargs browserify -o blockchainjs.test.js",
     "coverage": "find test/ -type f -name \"*.js\" | xargs istanbul cover _mocha --",
     "coveralls": "npm run coverage && coveralls <coverage/lcov.info",
-    "clean": "rm -f blockchainjs.js blockchainjs.test.js",
-    "karma": "./node_modules/karma/bin/karma start karma.conf.js",
-    "lint": "standard",
+    "lint": "eslint lib test",
     "test": "npm run test:node && npm run test:browser",
-    "test:node": "find test/ -type f -name \"*.js\" | xargs istanbul test mocha -- --reporter spec",
-    "test:browser": "npm run compile:test && npm run karma"
+    "test:browser": "karma start karma.conf.js",
+    "test:node": "find test/ -type f -name \"*.js\" | xargs istanbul test mocha -- --reporter spec"
   },
   "dependencies": {
     "bigi": "^1.4.0",
-    "bluebird": "^2.9.30",
+    "bluebird": "^2.9.34",
     "browser-request": "=0.3.3",
-    "bs58check": "^1.0.5",
-    "error-system": "^0.1.0",
-    "lodash": "^3.9.3",
-    "lru-cache": "^2.6.4",
-    "make-concurrent": "0.0.4",
-    "odd-storage": "^0.1.0",
-    "ready-mixin": "0.0.5",
+    "bs58check": "^1.0.6",
+    "error-system": "^1.0.0",
+    "lodash": "^3.10.1",
+    "lru-cache": "^2.6.5",
+    "make-concurrent": "^0.2.0",
+    "odd-storage": "^0.2.0",
+    "ready-mixin": "^0.1.0",
     "request": "=2.53.0",
-    "socket.io-client": "^1.3.5",
+    "socket.io-client": "^1.3.6",
     "url-join": "0.0.1",
     "ws": "^0.7.2"
   },
   "devDependencies": {
+    "babel-eslint": "^4.0.5",
     "bitcoinjs-lib": "=1.4.3",
-    "browserify": "^9.0.8",
-    "chai": "^2.3.0",
-    "coveralls": "^2.11.2",
+    "chai": "^3.2.0",
+    "coveralls": "^2.11.3",
+    "eslint": "^1.0.0",
+    "eslint-config-standard": "^4.0.0",
+    "eslint-plugin-standard": "^1.2.0",
     "helloblock-faucet": "^0.0.1",
-    "istanbul": "^0.3.13",
-    "karma": "^0.12.35",
-    "karma-chrome-launcher": "^0.1.12",
-    "karma-detect-browsers": "^2.0.0",
+    "istanbul": "^0.3.17",
+    "karma": "^0.13.8",
+    "karma-browserify": "^4.3.0",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-detect-browsers": "^2.0.1",
     "karma-firefox-launcher": "^0.1.6",
-    "karma-mocha": "^0.1.10",
-    "mocha": "^2.2.4",
+    "karma-mocha": "^0.2.0",
+    "mocha": "^2.2.5",
     "optimist": "^0.6.1",
-    "progress": "^1.1.8",
-    "standard": "^4.3.1",
-    "uglifyify": "^3.0.1"
+    "progress": "^1.1.8"
   },
   "browser": {
     "request": "browser-request",
     "./lib/storage/index.js": "./lib/storage/index-browser.js"
-  },
-  "standard": {
-    "ignore": [
-      "blockchainjs.js",
-      "blockchainjs.min.js",
-      "blockchainjs.test.js"
-    ]
   }
 }
