--- a/package.json
+++ b/package.json
@@ -31,26 +31,24 @@
     "url": "git://github.com/chromaway/blockchainjs.git", 
     "type": "git"
   }, 
-  "version": "0.3.10", 
+  "version": "0.3.11", 
   "dependencies": {
-    "socket.io-client": "1.3.5", 
-    "lodash": "3.4.0", 
-    "request": "2.53.0", 
-    "browser-request": "0.3.3", 
-    "bigi": "1.4.0", 
-    "url-join": "0.0.1", 
-    "ws": "0.7.1", 
-    "lru-cache": "2.5.0", 
-    "error-system": "0.1.0", 
-    "bluebird": "2.9.14", 
-    "bs58check": "1.0.4"
+    "bigi": "^1.4.0",
+    "bluebird": "^2.9.34",
+    "browser-request": "=0.3.3",
+    "bs58check": "^1.0.6",
+    "error-system": "^1.0.0",
+    "lodash": "^3.10.1",
+    "lru-cache": "^2.6.5",
+    "request": "=2.53.0",
+    "socket.io-client": "^1.3.6",
+    "url-join": "0.0.1",
+    "ws": "^0.7.2"
   }, 
   "scripts": {
     "coveralls": "npm run-script coverage && coveralls <coverage/lcov.info", 
     "coverage": "istanbul cover _mocha -- test/*.js test/**/*.js", 
     "lint": "standard", 
-    "compile_test": "browserify test/*.js test/**/*.js >blockchainjs.test.js", 
-    "compile": "browserify lib/index.js -s BlockchainJS -o blockchainjs.js", 
     "build": "npm run-script compile && npm run-script uglify", 
     "clean": "rm -f blockchainjs.js blockchainjs.min.js blockchainjs.test.js", 
     "test": "istanbul test mocha -- --reporter spec test/*.js test/**/*.js", 
@@ -64,18 +62,13 @@
     "testnet3"
   ], 
   "devDependencies": {
-    "coveralls": "2.11.2", 
-    "istanbul": "0.3.5", 
-    "uglify": "0.1.1", 
-    "bitcoinjs-lib": "1.4.3", 
+    "bitcoinjs-lib": "=1.4.3", 
     "helloblock-faucet": "0.0.1", 
-    "chai": "2.1.1", 
+    "chai": "3.2.0", 
     "mocha": "2.1.0", 
     "optimist": "0.6.1", 
-    "progress": "1.1.8", 
-    "standard": "2.10.0", 
-    "browserify": "9.0.3"
-  }, 
+    "progress": "1.1.8"
+  },
   "main": "lib/index.js", 
   "description": "Bitcoin blockchain for wallets."
 }
